# software-engineer-h1-backend

./: db-setup.sh  pyproject.toml
src/: main.py
src/auth/: models.py  router.py  service.py
src/database/: database.py
src/requests/: models.py  router.py  schemas.py  service.py
