[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlmodel = "^0.0.14"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
